# bsc-thesis

./: .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  defense.tex  gettraceback.sh  meson.build  requirements.txt  thesis.tex
examples/: example.cpp
include/dn/: AstAction.hpp  AstConsumer.hpp  AstVisitor.hpp  VariableDeclaration.hpp
schema/: varnames.json
src/: AstAction.cpp  AstConsumer.cpp  AstVisitor.cpp  VariableDeclaration.cpp  plugin.cpp
suggest_names/: database.py  merge.py  suggest.py  suggest_names  suggest_names_rename  variable.py
test/robot/dump-names/: Lister.py  __init__.robot  type-names.robot  variables.robot
test/robot/dump-names/inputs/: member_union_access.cpp  single_int.cpp  single_int_argument.cpp  single_struct_member.cpp  union_access.cpp  unnamed_int_argument.cpp
test/robot/dump-names/libraries/: InputBuilder.py  TypeNames.py  Variables.py
test/robot/suggest-names/: __init__.robot  merge.robot  suggest.robot
test/robot/suggest-names/libraries/: DatabaseLibrary.py
test/robot/suggest-names/resources/: DatabaseKeywords.robot
tex/: appendix.tex  bibliography.bib  closing.tex  developer_documentation.tex  introduction.tex  summary.tex  testing.tex  titlepage.tex  user_documentation.tex  version.tex.in
vim/doc/: suggest-names.txt
vim/plugin/: suggestnames.vim
